crates/iota/tests/snapshots/cli_tests__clever_errors.snap
---
source: crates/iota/tests/cli_tests.rs
expression: error_string
---
Non-clever-abort
---
Error executing transaction 'ELIDED_TRANSACTION_DIGEST': Error in 1st command, from 'ELIDED_ADDRESS::clever_errors::aborter' (instruction 1), abort code: 0
---
Line-only-abort
---
Error executing transaction 'ELIDED_TRANSACTION_DIGEST': Error in 1st command, from 'ELIDED_ADDRESS::clever_errors::aborter_line_no' (line 19)
---
Clever-error-utf8
---
Error executing transaction 'ELIDED_TRANSACTION_DIGEST': Error in 1st command, from 'ELIDED_ADDRESS::clever_errors::clever_aborter' (line 23), abort 'ENotFound': Element not found in vector 💥 🚀 🌠
---
Clever-error-non-utf8
---
Error executing transaction 'ELIDED_TRANSACTION_DIGEST': Error in 1st command, from 'ELIDED_ADDRESS::clever_errors::clever_aborter_not_a_string' (line 27), abort 'ENotAString': BAEAAAAAAAAAAgAAAAAAAAADAAAAAAAAAAQAAAAAAAAA
---
